--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -223,6 +223,9 @@
       mirrors by rotating the markers (which shouldn't happen, as this would
       kill off the co-operative element of the game), as well as other things.
       As such, development on projection code was once again necessary.
+      Throughout this week, massive progress was made towards integration of 
+      the various parts of the software, especially from early Wednesday on.
+      
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
