--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -225,6 +225,8 @@
       As such, development on projection code was once again necessary.
       Throughout this week, massive progress was made towards integration of 
       the various parts of the software, especially from early Wednesday on.
+      Because of the progress considering integration of software, level design
+      could finally start.
       
       
       \subsection{The process table} \label{ssec:processtable}
@@ -249,6 +251,8 @@
 	      	      Testing & \space & \space & X & X & X & X & X & X & \space & \space \\
 	      	      \hline
 	      	      Projection & \space & \space & \space & X & X & X & X & X & \space & \space \\
+		      	  \hline
+		      	  Level design & \space & \space & \space & \space & \space & \space & \space & X & \space & \space \\
 		      	  \hline
 	      \end{tabular}
       \end{table}
