Elaborated on the main reason for using checkpoints.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -437,7 +437,12 @@
 			in the level as well as all the targets. Checkpoints do not require
 			that the laser beam has any specific color in order for them to register
 			that they have been hit. The checkpoints also allow lasers to pass
-			through them. An image of a checkpoint is shown in TODO
+			through them. Checkpoints have been added mainly to prevent sequence
+			breaking of a level (sequence breaking is a term used in video games
+			for being able to get to a goal using a different route than you were
+			supposed to, often making it far easier than it should be. Gamers making
+			use of this "break the sequence" of actions in the game, hence the term).
+			An image of a checkpoint is shown in TODO
 			%TODO: IMAGE CHECKPOINT.
 			
 		\subsection{Portal} \label{ssec:portal}
