Add SIG Midterm Evaluation

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -1,5 +1,5 @@
 \documentclass[]{report}
-\usepackage[english]{babel}
+\usepackage[dutch, english]{babel}
 
 \usepackage{url}
 \usepackage{cite}
@@ -47,6 +47,9 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \input{ProductPlan/GameConcept.tex}
 \input{ProductPlan/Approach.tex}
 \input{ProductPlan/Planning.tex}
+
+% SIG evaluations
+\input{SIG/Evaluation1.tex}
 
 \pagebreak
 \addcontentsline{toc}{chapter}{Bibliography}
