Worked more in the report.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -521,4 +521,20 @@
 			beam should correspond to the color of the crystal it is hit with.
 			
 		\subsection{Levels 6 to 15: the easy levels} \label{ssec: easylevels}
+			These levels serve to introduce the player to slightly more advanced
+			game objects and their functions. As such, they introduce elevators
+			and lens splitters, as well as checkpoints. Game mechanics introduced
+			in these levels are: elevators allow a laser beam to pass over objects,
+			lens splitters create two beams from one, and all checkpoints in a
+			map need to be hit before one can proceed to the next level. The
+			levels that introduce these features are designed to be impossible
+			to complete without making use of these new features (this is an
+			inherent function of the checkpoints, as one can only advance to the
+			next level if all checkpoints have been hit, thus making use of
+			the checkpoints). For example, when introducing the elevator, the
+			laser target is in a closed off area and can only be reached by
+			using an elevator to elevate the beam, before lowering the beam using
+			another elevator, when the beam has reached the closed area.
+			
+		\subsection{Levels 16 to 25: the advanced levels}
 			...
