Added second SIG evaluation to the report.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -27,7 +27,6 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \end{abstract}
 \tableofcontents
 \listoffigures
-\input{Summary.tex}
 
 \input{Orientation.tex}
 \input{Design.tex}
@@ -50,6 +49,7 @@ mirrors to deflect the laser beam coming from the laser to the target.
 
 % SIG evaluations
 \input{SIG/Evaluation1.tex}
+\input{SIG/Evaluation2.tex}
 
 \pagebreak
 \addcontentsline{toc}{chapter}{Bibliography}
