--- a/Reports/Final Report/SIG/Evaluation1.tex
+++ b/Reports/Final Report/SIG/Evaluation1.tex
@@ -27,3 +27,5 @@
 	Daarnaast nog de opmerking dat het goed is om te zien dat de README duidelijk aan geeft dat de 'netlink' code niet zelf geschreven is. Zou het hier nog helpen om duidelijk aan te geven welk versienummer van deze library nu in gebruik is?
 
 	Over het algemeen scoort de code bovengemiddeld, hopelijk lukt het om dit niveau te behouden tijdens de rest van de ontwikkelfase. Als laatste nog de opmerking dat er geen (unit)test-code is gevonden in de code-upload. Het is sterk aan te raden om in ieder geval voor de belangrijkste delen van de functionaliteit automatische tests gedefinieerd te hebben om ervoor te zorgen dat eventuele aanpassingen niet voor ongewenst gedrag zorgen. 
+	
+	\selectlanguage{english}
