Changed a part of the final report which had incorrect quotation mark usage.

--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -315,7 +315,7 @@
             The normalized positions and relative rotations are sent to the META
             clients using the communication protocol discussed in the previous
             section. Once they arrive, they are transformed into the META
-            coordinate system using a \"level marker\". A \"level marker\" is an
+            coordinate system using a "level marker". A "level marker" is an
             arbitrary marker detected by both the master camera and META
             built-in tracking system. The client can then transform the relative
             position of the other markers compared to the level marker from the
