Written about advanced levels.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -537,4 +537,8 @@
 			another elevator, when the beam has reached the closed area.
 			
 		\subsection{Levels 16 to 25: the advanced levels}
-			...
+			These levels introduce the players to the last game object remaining:
+			the portal. Also, the levels are a lot more difficult and require
+			far more cooperation than the easy levels, from both the local
+			and the remote players. Game mechanics introduced in these levels
+			are: portals allow beams to travel to places normally unreachable.
