Low-productivity work-on-the-report commit.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -228,6 +228,9 @@
       Because of the progress considering integration of software, level design
       could finally start.
       
+      \subsection{Further integration}
+      Week 9 was even further devoted to integration of all the various bits and
+      pieces of the software. 
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
