Rewritten User Testing to use past tense.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -85,35 +85,29 @@
 		\subsection{User Tests}
 			Although testing the code is important and it helps ensure that the
 			software is working correctly, it doesn't tell us anything about the
-			actual usability of the product. Since we're developing a game, it's
-			especially important that the end users will have fun using the
+			actual usability of the product. Since we have been developing a game, 
+			it is especially important that the end users will have fun using the
 			product. Properties like these can be evaluated by doing user tests.
 
-			Most of the initial user testing will be done by us, the developers,
-			because external parties will not have a good experience while it's
-			still in the middle of development. This kind of user testing also
-			comes automatically with developing the features of the game.
+			Most of the initial play testing has been done by us, the developers,
+			because external parties would not have had a good experience while 
+			the game was still in the middle of development. However, as the 
+			project was nearing completion, the game could no longer be objectively
+			played and tested by the developers. At that point, we were already
+			too familiar with the levels and game mechanics to be able to properly
+			judge if the concepts are too hard to figure out for new players. By 
+			having a lot of other people play the game, we were able to estimate if 
+			certain levels were either too easy or too hard, and if all of the 
+			different game objects were easy to understand and fun to interact with.
 
-			In the last stage of development, when all of the technical
-			challenges have been solved, we will be primarily working on the
-			levels and gameplay of the game. It is no longer sufficient to just
-			have the developers test the game by that point, because they will
-			have an unrealistic playing experience. The developers will already
-			be very familiar with the levels and game mechanics, which means
-			that they won't be able to properly judge if the concepts are too
-			hard to figure out for new players. By having a lot of other people
-			playing the game, we'll be able to estimate if certain levels are
-			too easy or too hard, and if all of the different game objects are
-			fun to interact with. For example, if the beam splitter turns out to
-			be too complex to use, we might remove it from the game.
-
-			Finding other computer science students to play the game will not be
-			a problem, but we will also try to find other demographics to test
-			with. Computer science students are used to approaching logic
-			problems like those in our puzzle game, which may give us a skewed
-			idea of how hard the game is. If time allows for it, we could have
-			high school students try the game as well in the Delft Science
-			Center.
+			Finding other computer science students to play the game was not much of 
+			a problem, but we also needed to have other people play the game, to get 
+			a good overview of how different people perceive the game. This is
+			especially important, as computer science students mostly indicated the 
+			technical issues and limitations of the Meta One glasses, which were mostly
+			already known to us.
+			
+			%TODO Add results of user testing with non-EEMCS students/people.
 		
 		\subsection{Code coverage} \label{ssec:codecoverage}
 			Code coverage is a metric that can be used to determine how thorough
