Wrote about week 9.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -230,7 +230,13 @@
       
       \subsection{Further integration}
       Week 9 was even further devoted to integration of all the various bits and
-      pieces of the software. 
+      pieces of the software. Once again, massive progress was made in
+      integrating all software, and at the end of the week, the first fully
+      working version was finally released. 
+      
+      \subsection{Wrapping up}
+      At the end of week 10, the final report had to be handed in. This meant
+      that the project had to be wrapped up.
       
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
@@ -243,9 +249,9 @@
 	      	      \hline
 	      	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
 	      	      \hline
-	      	      Final report & \space & \space & \space & X & X & X & X & X & \space & \space \\
+	      	      Final report & \space & \space & \space & X & X & X & X & X & X & \space \\
 	      	      \hline
-	      	      Networking & X & X & \space & \space & X & X & X & \space & \space & \space \\
+	      	      Networking & X & X & \space & \space & X & X & X & \space & X & \space \\
 	      	      \hline
 	      	      Augmented reality & \space & \space & \space & X & X & X & X & X & \space & \space \\
 	      	      \hline
@@ -253,9 +259,9 @@
 	      	      \hline
 	      	      Testing & \space & \space & X & X & X & X & X & X & \space & \space \\
 	      	      \hline
-	      	      Projection & \space & \space & \space & X & X & X & X & X & \space & \space \\
+	      	      Projection & \space & \space & \space & X & X & X & X & X & X & \space \\
 		      	  \hline
-		      	  Level design & \space & \space & \space & \space & \space & \space & \space & X & \space & \space \\
+		      	  Level design & \space & \space & \space & \space & \space & \space & \space & X & X & \space \\
 		      	  \hline
 	      \end{tabular}
       \end{table}
