Added a picture of the checkpoint object.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -428,8 +428,14 @@
 			for being able to get to a goal using a different route than you were
 			supposed to, often making it far easier than it should be. Gamers making
 			use of this "break the sequence" of actions in the game, hence the term).
-			An image of a checkpoint is shown in TODO
-			%TODO: IMAGE CHECKPOINT.
+			An image of a checkpoint is shown in \ref{fig:checkpoint}. Once it is
+			hit, it starts spinning, giving visual feedback of being hit.
+			\begin{figure}[!ht]
+				\centering
+				\includegraphics[scale = 0.7]{Checkpoint}
+				\caption{The checkpoint.}
+				\label{fig:checkpoint}
+			\end{figure}
 			
 		\subsection{Portal} \label{ssec:portal}
 			The portal is a more advanced game object. It allows light that travels 
